--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ionic-react-example",
-  "description": "An Ionic project",
-  "version": "0.0.1",
+  "name": "mybudgets",
+  "description": "A Budgets List",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -17,13 +17,6 @@
     "@capacitor/status-bar": "1.0.8",
     "@ionic/core": "^6.1.3",
     "@ionic/pwa-elements": "^3.1.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^17.0.29",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.0",
     "firebase": "^9.6.11",
     "ionicons": "^6.0.1",
     "next": "^12.1.5",
@@ -47,6 +40,13 @@
   },
   "devDependencies": {
     "@capacitor/cli": "3.5.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^17.0.29",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.0",
     "copy-webpack-plugin": "^10.2.4",
     "sass": "^1.51.0"
   },
